syntax = "proto3";

package userpb;

service UserService {
  rpc GetHabitQuota(GetHabitQuotaRequest) returns (GetHabitQuotaResponse) {}
  rpc GetGoalQuota(GetGoalQuotaRequest) returns (GetGoalQuotaResponse) {}
  rpc GetTaskQuota(GetTaskQuotaRequest) returns (GetTaskQuotaResponse) {}
  rpc GetNoteQuota(GetNoteQuotaRequest) returns (GetNoteQuotaResponse) {}
  rpc GetQRCodeQuota(GetQRCodeQuotaRequest) returns (GetQRCodeQuotaResponse) {}
}

// GET HABIT QUOTA

message GetHabitQuotaRequest {
  string traceId = 1;
  string userId = 2;
}

message GetHabitQuotaResponse {
  int64 limit = 1;
}

// GET GOAL QUOTA

message GetGoalQuotaRequest {
  string traceId = 1;
  string userId = 2;
}

message GetGoalQuotaResponse {
  int64 limit = 1;
}

// GET TASK QUOTA

message GetTaskQuotaRequest {
  string traceId = 1;
  string userId = 2;
}

message GetTaskQuotaResponse {
  int64 limit = 1;
}

// GET NOTE QUOTA

message GetNoteQuotaRequest {
  string traceId = 1;
  string userId = 2;
}

message GetNoteQuotaResponse {
  int64 limit = 1;
}

// GET QR CODE QUOTA

message GetQRCodeQuotaRequest {
  string traceId = 1;
  string userId = 2;
}

message GetQRCodeQuotaResponse {
  int64 limit = 1;
}